package org.dianna.core;

option java_package = "org.dianna.core";
option java_outer_classname = "Protos";

message DomainTransaction {
  required int32 version = 1;            // 4 bytes
  required bytes fee_transaction = 2;     // 64 bytes
  optional bytes prev_transaction = 3;    // 64 bytes
  required bytes domain = 4;              // 1 .. 64 bytes
  required bytes value = 5;               // 0 .. 10000 bytes
  required bytes next_pubkey = 6;         // ??? bytes
  required bytes signature = 7;           // ??? bytes
}

message DomainTransactionSimple {
  // Simplified version for signing (i.e. without signature)
  required int32 version = 1;            // 4 bytes
  required bytes fee_transaction = 2;     // 64 bytes
  optional bytes prev_transaction = 3;    // 64 bytes
  required bytes domain = 4;              // 1 .. 64 bytes
  required bytes value = 5;               // 0 .. 10000 bytes
  required bytes next_pubkey = 6;         // ??? bytes
}

message BlockHeader {
  required int32 version = 1;
  required bytes prev_block_hash = 2;
  required int32 timestamp = 3;
  required int32 namespace = 4;
  required uint64 price = 5;
  required bytes merkle_root = 6;

  message AuxData {
    required bytes parent_hash = 1;
    required int32 coinbase_tx_index = 2;
    repeated bytes aux_branch = 3;
  }

  required AuxData aux_data = 7;
}

message Block {
  required BlockHeader header = 1;
  repeated DomainTransaction transactions = 2;
  repeated bytes merkle_tree = 3;
}